Add linting and fix linter errors

--- a/examples/minimal/index.html
+++ b/examples/minimal/index.html
@@ -6,7 +6,7 @@
 	<meta name="referrer" content="no-referrer">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.2/css/bulma.min.css" integrity="sha256-d+mgRrjtsPCjrT7ltuB1sZ2VybUn1Xgdf8piVG/Va/k=" crossorigin="anonymous" />
-	<link rel="stylesheet" href="minimal.css" />
+	<link rel="stylesheet" href="index.css" />
 </head>
 <body>
 <div id="app" v-cloak>
@@ -29,7 +29,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.2/vue.min.js" integrity="sha256-Gs0UYwrz/B58FsQggzU+vvCSyG/pewemP4Lssjzv8Ho=" crossorigin="anonymous"></script>
 <script src="../../umd/glue.js" crossorigin="anonymous"></script>
-<script src="minimal.js"></script>
+<script src="index.js"></script>
 
 </div> <!-- id=app -->
 </body>
